--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "staged_file"
 version = "0.2.0"
 license = "MIT OR Apache-2.0"
 authors = ["Bryant Luk <code@bryantluk.com>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56.1"
 description = "Creates a temporary file which can then be committed to a final path."
 repository = "https://github.com/bluk/staged_file"
 readme = "README.md"
